--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -7,3 +7,6 @@ Lars:
       - label: "Twitter"
         icon: "fab fa-fw fa-twitter-square"
         url: "https://twitter.com/l_kroll"
+Test:
+  name: "Testname"
+  bio: "I'm just a placeholder"
