--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,14 +1,11 @@
 # main links
 main:
+  #- title: "Lab News"
+  #  url: /categories/
   #- title: "Projects"
   #  url: /projects/
   #- title: "Team"
   #  url: /team/
   - title: "About"
     url: /about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
-  # - title: "Sitemap"
-  #   url: /sitemap/
+ 
