--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -10,5 +10,13 @@ Lars:
 Anja:
   name    : "Anja Seidel"
   bio         : "Data Scientist"
+Edgar:
+  name    : "Dr. Edgar Steiger"
+  bio         : "Data Scientist"
+  avatar      : "/assets/images/edgar.jpeg"
+  links:
+      - label: "Twitter"
+        icon: "fab fa-fw fa-twitter-square"
+        url: "https://twitter.com/edquartett"
 
         
