--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@
 # https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
 
 # theme                  : "minimal-mistakes-jekyll"
-# remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "contrast" # "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+remote_theme             : "mmistakes/minimal-mistakes"
+minimal_mistakes_skin    : "air" # "default" , "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "en-US"
@@ -20,7 +20,7 @@ title                    : "Zi Data Science Lab"
 title_separator          : "|"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : #
-description              : # "An amazing website."
+description              : "News from the Zi Data Science Lab in Berlin working to improve health care in Germany." # "An amazing website."
 url                      : "http://www.zidatasciencelab.de" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : zidatalab/zidatalab.github.io # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
