changed of categories to >news<

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
   - title: "News from the Lab"
-    url: /categories/
+    url: /news/
   #- title: "Projects"
   #  url: /projects/
   - title: "Team"
