--- a/_config.yml
+++ b/_config.yml
@@ -226,7 +226,7 @@ whitelist:
 #  - <base_path>/my-awesome-category/index.html ~> path: /
 category_archive:
   type: liquid
-  path: /categories/
+  path: /news/
 tag_archive:
   type: liquid
   path: /tags/
