--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 # main links
 main:
-  - title: "News from the Lab"
+  - title: "News"
     url: /news/
   #- title: "Projects"
   #  url: /projects/
