--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
-  - title: "News"
-    url: /news/
+  #- title: "News"
+  #  url: /news/
   #- title: "Projects"
   #  url: /projects/
   - title: "Team"
