--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -21,7 +21,7 @@ Edgar:
         url: "https://twitter.com/edquartett"
 Tobias:
   name    : "Tobias Mussgnug"
-  bio         : "Data Scientist"
+  bio         : "Health Scientist"
   avatar      : "/assets/images/robot-min.jpg"
   
   
