--- a/_config.yml
+++ b/_config.yml
@@ -95,8 +95,8 @@ analytics:
 author:
   name             : "Dr. Lars Eric Kroll"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  bio              : #"I am an **amazing** person."
+  location         : #"Somewhere"
   email            :
   links:
     - label: "Email"
