--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 main:
   #- title: "News"
   #  url: /news/
-  #- title: "Projects"
-  #  url: /projects/
+  - title: "Projects"
+    url: /projects/
   - title: "Team"
     url: /team/
   - title: "About"
