--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,8 @@ main:
     url: /team/
   - title: "News"
     url: /news/
+  - title: "Status"
+    url: /status/  
   - title: "Projects"
     url: /projects/
   
